option('cb',
  type : 'boolean',
  value : true,
  description : 'ComicBook support in Etui'
)

option('djvu',
  type : 'boolean',
  value : true,
  description : 'DJvu support in Etui'
)

option('tiff',
  type : 'boolean',
  value : true,
  description : 'Tiff support in Etui'
)

option('license',
  type : 'string',
  value : 'lgplv2',
  description : 'License of Etui (pass gplv2 for djvu and agplv3 for mupdf and djvu)'
)

option('mupdf',
  type : 'boolean',
  value : true,
  description : 'MuPDF support in Etui'
)

option('mupdf-libdir',
  type : 'string',
  value : '/usr/lib',
  description : 'path to the static library of mupdf'
)

option('mupdf-includedir',
  type : 'string',
  value : '/usr/include',
  description : 'path to the header files of mupdf, must contain mupdf/ subdir'
)

option('mupdf-static-lib',
  type : 'string',
  value : 'mupdf',
  description : 'name of the static library of mupdf without extension'
)

option('mupdf-static-third',
  type : 'string',
  value : 'mupdf-third',
  description : 'name of the third-party static library of mupdf without extension'
)

option('nls',
  type: 'boolean',
  value: true,
  description: 'enable localization: (default=true)'
)

